added section discount

--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -26,12 +26,13 @@ body {
 	max-width: 1920px;
 	margin: 0 auto;
 	padding: 0 10px;
-}
-
-.container-fluid.container-pink {
-	background-color: #fdddcf;
 	position: relative;
 
+}
+
+.container-pink {
+	background-color: #fdddcf;
+	
 }
 
 .container-fluid.container-footer{
