--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1640,7 +1640,7 @@
 
 .steps {
     &__inner {
-        padding: 60px 0 120px 0;
+        padding: 60px 0 180px 0;
 
     }
 
@@ -1685,6 +1685,7 @@
         border-radius: 50%;
         position: relative;
         margin-bottom: 4px;
+
         span {
             width: 116px;
             height: 116px;
@@ -1694,20 +1695,108 @@
             transition: all .3s ease-in-out;
             transition-delay: .1s;
         }
+
         &:hover {
-            color: $accent;  
-            background: rgba(255, 63, 58, 0.12);    
+            color: $accent;
+            background: rgba(255, 63, 58, 0.12);
+
             span {
                 background: rgba(255, 63, 58, 0.06);
-            }     
+            }
         }
     }
+
     &__list-title {
         @extend %title-sml;
         margin-bottom: 8px;
     }
+
     &__list-text {
         color: #787A80;
+    }
+}
+
+.discount {
+    &__inner {
+        padding: 48px 60px;
+        margin-bottom: 180px;
+    }
+
+    &__title-box {
+        display: flex;
+        justify-content: space-between;
+        margin-bottom: 32px;
+    }
+
+    &__title {
+        font-size: 32px;
+        line-height: 42px;
+        font-weight: 900;
+        color: $title;
+        text-align: left;
+        width: 440px;
+    }
+
+    &__counter-list {
+        display: flex;
+        text-align: center;
+        color: $title;
+
+        li {
+            font-size: 20px;
+            font-weight: 700;
+            // min-width: 34px;
+        }
+
+        li+li {
+            margin-left: 30px;
+        }
+
+        span {
+            display: block;
+            font-size: 12px;
+
+        }
+    }
+
+    &__form {
+        display: flex;
+        justify-content: space-between;
+
+        label {
+            display: flex;
+            flex-direction: column;
+            flex-basis: 100%;
+        }
+
+        .discount__form-input {
+           
+            max-width: 290px;
+            padding: 12px 16px;
+            font-size: 14px;
+            line-height: 21px;
+            margin-top: 15px;
+            color: #9A9CA5;
+            border: 1px solid #D7DADD;
+            border-radius: 4px;
+            outline-color: $accent;
+        }
+
+        input+input {
+            margin-left: 14px;
+        }
+
+        p {
+            align-self: end;
+        }
+
+        .btn {
+            line-height: 45px;
+            padding: 0px 32px;
+            font-size: 14px;
+            letter-spacing: 0.5px;
+            // display: flex;
+        }
     }
 }
 
