added section course-benefits

--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1800,4 +1800,56 @@
     }
 }
 
+.course-benefits {
+    &__inner {
+        display: flex;
+        justify-content: space-between;
+        padding-bottom: 180px;
+    }
+    &__title-box {
+        max-width: 500px;
+        width: 100%;
+        margin-right: 130px;
+    }
+    &__suptitle {
+        @extend %title-sup;
+        text-align: left;
+        max-width: 240px;
+        width: 100%;
+    }
+    &__title {
+        @extend %title;
+        text-align: left;
+
+    }
+    &__list {
+        max-width: 596px;
+        width: 100%;        
+        margin-top: 32px;
+    }
+    &__list-item {
+        padding-left: 32px;
+        position: relative;
+        &::before {
+            content: "";
+            background-image: url(../images/about-icon.png);
+            background-repeat: no-repeat;
+            background-size: cover;
+            width: 16px;
+            height: 16px;
+            position: absolute;
+            left: 0;
+            top: 6px;
+        }
+        & + .course-benefits__list-item {
+            margin-top: 20px;
+        }
+        p {
+            font-size: 20px;
+            line-height: 30px;
+        }
+        
+    }
+}
+
 @import 'media';
