--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -54,9 +54,9 @@ body {
 	background: $accent;
 	color: #fff;
 	font-size: 16px;
-	// line-height: 52px;
+	line-height: 52px;
 	border-radius: 4px;
-	padding: 20px 40px;
+	padding: 0px 40px;
 	font-weight: 700;
 	border: 1px solid transparent;
 	transition: all .3s ease-in-out;
