--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -81,3 +81,40 @@ body {
 	}
 }
 
+
+.pagination {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	&__list {
+		display: flex;
+		margin: 0 23px;
+	}
+	&__item + .pagination__item {
+		margin-left: 20px;
+	}
+	&__link {
+		font-weight: 700;
+		&:hover {
+			color: $accent;
+		}
+		
+	}
+	&__link--active {
+		color: $accent;			
+	}
+	&__arrow {
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		&:hover {
+			svg {
+				stroke: $accent;
+			}
+		}		
+	}
+	&__arrow--hide {
+		display: none;
+	}
+	
+}
