--- a/app/scss/_libs.scss
+++ b/app/scss/_libs.scss
@@ -1,2 +1,4 @@
 @import '../../node_modules/slick-carousel/slick/slick';
 @import '../../node_modules/slick-carousel/slick/slick-theme';
+@import '../../node_modules/jquery-form-styler/dist/jquery.formstyler';
+@import '../../node_modules/jquery-form-styler/dist/jquery.formstyler.theme';
