--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1894,15 +1894,17 @@
         margin-bottom: 24px;
 
         &.active {
-            .program-item__descr {                
-                will-change: height;                
-                visibility: visible;             ;
+            .program-item__descr {
+                will-change: height;
+                visibility: visible;
+                ;
                 padding-top: 16px;
                 position: static;
                 opacity: 1;
                 height: auto;
             }
         }
+
         &.active::before {
             content: "-";
         }
@@ -1932,7 +1934,7 @@
     &-item__descr {
         height: 0;
         position: absolute;
-        
+
         opacity: 0;
         visibility: hidden;
         overflow-y: hidden;
@@ -1944,10 +1946,10 @@
 
     }
 
- 
+
 
     &__image {
-        width: 100%;     
+        width: 100%;
         margin-top: 40px;
     }
 
@@ -1960,77 +1962,92 @@
         justify-content: space-between;
         padding-bottom: 100px;
     }
+
     &__suptitle {
         @extend %title-sup;
         text-align: left;
     }
+
     &__title {
         @extend %title;
         text-align: left;
         margin-bottom: 40px;
     }
+
     &__form-box {
         max-width: 495px;
         width: 100%;
         margin-left: 30px;
     }
+
     &__form {
-        
+
         &.discount__form {
             flex-direction: column;
+
             input {
                 max-width: 495px;
-                width: 100%;              
+                width: 100%;
                 margin-top: 8px;
                 margin-bottom: 24px;
             }
+
             .btn {
-                margin-top: 26px;                             
+                margin-top: 26px;
             }
+
             p {
                 align-self: center;
                 width: 100%;
             }
-        }       
+        }
     }
- 
+
 }
 
 .other-courses {
     .slick-initialized .slick-slide {
         display: flex;
     }
+
     .slick-arrow {
-        position: absolute; 
+        position: absolute;
         top: -66px;
         right: 0;
         cursor: pointer;
     }
+
     .left-arrow {
         right: 30px;
     }
+
     &__inner {
         padding: 120px 0 180px 0;
     }
+
     &__suptitle {
         @extend %title-sup;
         text-align: left;
         max-width: 240px;
     }
+
     &__title {
         @extend %title;
         text-align: left;
         margin-bottom: 60px;
         max-width: 440px;
     }
+
     &__slider {
-      position: relative;
-      margin-bottom: 80px;
+        position: relative;
+        margin-bottom: 80px;
     }
-    &__btn-box {        
+
+    &__btn-box {
         display: flex;
         justify-content: center;
         align-items: center;
+
         span {
             margin-right: 40px;
             font-size: 28px;
@@ -2039,6 +2056,194 @@
             color: $title;
         }
     }
+}
+
+
+.events-page {
+    &__inner {
+        margin-bottom: 180px;
+    }
+    &__form-box {
+        display: flex;
+        justify-content: space-between;
+        flex-basis: 100%;
+        margin-bottom: 60px;
+    }
+
+    &__form {
+
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        flex-basis: 95%;
+
+        label {
+            font-weight: 700;
+
+            span {
+                margin-right: 12px;
+            }
+        }
+
+
+    }
+
+
+    .jq-selectbox__select {
+        width: 160px;
+        height: 44px;
+        background: transparent;
+        border: 1px solid #D7DADD;
+        border-radius: 4px;
+        color: $text;
+        line-height: 44px;
+        font-size: 14px;
+        font-family: 'Lato', sans-serif;
+
+
+    }
+
+    .jq-selectbox__trigger {
+        border-left: none;
+        background-image: url(../images/arrow-down.png);
+        background-repeat: no-repeat;
+        right: 20px;
+        top: 19px;
+        height: 8px;
+        width: 12px;
+    }
+
+    .jq-selectbox__trigger-arrow {
+        border: none;
+    }
+
+    .jq-selectbox__dropdown {
+        margin: 0;
+    }
+
+    .jq-number__field {
+        width: 72px;
+        height: 44px;
+        background: transparent;
+        border: 1px solid #D7DADD;
+        border-radius: 4px;
+        color: $text;
+        line-height: 44px;
+        font-size: 14px;
+        font-family: 'Lato', sans-serif;
+    }
+
+    .jq-number {
+        margin: 0 12px;
+        font-size: 14px;
+        font-family: 'Lato', sans-serif;
+        padding: 0;
+    }
+
+    .jq-number__spin {
+        background: #fff;
+        border: none;
+        text-shadow: none;
+        box-shadow: none;
+        width: 30px;
+        height: 0;
+
+    }
+
+    .jq-number__spin.minus:after {
+        top: -18px;
+        border-top: 5px solid #999;
+        border-right: 5px solid transparent;
+        border-bottom: none;
+        border-left: 5px solid transparent;
+    }
+
+    .jq-number__spin:after {
+        content: "";
+        position: absolute;
+        top: 16px;
+        left: 11px;
+        width: 0;
+        height: 0;
+        border-right: 5px solid transparent;
+        border-bottom: 5px solid #999;
+        border-left: 5px solid transparent;
+    }
+
+    .show-text {
+        color: #787A80;
+        font-weight: 400;
+    }
+
+    &__search-box {
+        position: relative;
+
+        &:hover {
+            svg {
+                stroke: $accent;
+            }
+        }
+
+        svg {
+            position: absolute;
+            top: 16px;
+            right: 15px;
+
+        }
+    }
+
+    &__search {
+        font-size: 14px;
+        line-height: 21px;
+        font-weight: 400;
+        color: #9A9CA5;
+        padding: 12px 50px 12px 16px;
+        border: 1px solid #D7DADD;
+        border-radius: 4px;
+        outline-color: $accent;
+
+    }
+
+    &__filter-box {
+        display: flex;
+        align-items: center;
+        margin-left: 40px;
+
+    }
+
+    &__filter-btn {
+        width: 30px;
+        height: 40px;
+        display: flex;
+        padding: 0;
+        justify-content: center;
+        align-items: center;
+        background-color: transparent;
+        border: none;
+        cursor: pointer;
+
+        &--active {
+            svg {
+                stroke: $accent;
+            }
+        }
+    }
+
+    &__content {
+        margin-bottom: 60px;
+    }
+
+    .events__content-item {
+        border: 1px solid #E5E8ED;
+        border-radius: 4px;
+
+        &:hover {
+            box-shadow: 0px 80px 80px -20px rgba(154, 156, 165, 0.08), 0px 30px 24px -10px rgba(154, 156, 165, 0.05), 0px 12px 10px -6px rgba(154, 156, 165, 0.04), 0px 4px 4px -4px rgba(30, 33, 44, 0.03);
+            border-radius: 4px;
+        }
+    }
+    
+
 }
 
 
