--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -731,6 +731,7 @@
             box-shadow: 0px 80px 80px -20px rgba(255, 63, 58, 0.16), 0px 30px 24px -10px rgba(255, 63, 58, 0.1), 0px 12px 10px -6px rgba(255, 63, 58, 0.08), 0px 4px 4px -4px rgba(30, 33, 44, 0.05);
             transform: scale(1.02)
         }
+
     }
 
     &-item__month {
@@ -2063,6 +2064,7 @@
     &__inner {
         margin-bottom: 180px;
     }
+
     &__form-box {
         display: flex;
         justify-content: space-between;
@@ -2232,19 +2234,138 @@
     &__content {
         margin-bottom: 60px;
     }
-
-    .events__content-item {
-        border: 1px solid #E5E8ED;
-        border-radius: 4px;
-
-        &:hover {
-            box-shadow: 0px 80px 80px -20px rgba(154, 156, 165, 0.08), 0px 30px 24px -10px rgba(154, 156, 165, 0.05), 0px 12px 10px -6px rgba(154, 156, 165, 0.04), 0px 4px 4px -4px rgba(30, 33, 44, 0.03);
+    .events-page__content {
+        .events-page__content-item  {
+            background-color: #fff;
+            display: flex;
+            padding: 32px 40px;
+            align-items: center;
+            margin-bottom: 24px;
+            transition: all .3s;
             border-radius: 4px;
+            position: relative;
+            border: 1px solid #E5E8ED;
+            border-radius: 4px;
+    
+            &:hover {
+                box-shadow: 0px 80px 80px -20px rgba(154, 156, 165, 0.08), 0px 30px 24px -10px rgba(154, 156, 165, 0.05), 0px 12px 10px -6px rgba(154, 156, 165, 0.04), 0px 4px 4px -4px rgba(30, 33, 44, 0.03);
+                transform: scale(1.02);
+                border-radius: 4px;
+            }
         }
     }
+ 
+    .events-page__content.events__content-item--list {
+        .events-page__content-item  {
+            background-color: #fff;
+            display: flex;
+            padding: 32px 40px;
+            align-items: center;
+            margin-bottom: 24px;
+            transition: all .3s;
+            border-radius: 4px;
+            position: relative;
+            border: 1px solid #E5E8ED;
+            border-radius: 4px;
     
+            &:hover {
+                box-shadow: 0px 80px 80px -20px rgba(154, 156, 165, 0.08), 0px 30px 24px -10px rgba(154, 156, 165, 0.05), 0px 12px 10px -6px rgba(154, 156, 165, 0.04), 0px 4px 4px -4px rgba(30, 33, 44, 0.03);
+                transform: scale(1.02);
+                border-radius: 4px;
+            }
+        }
+    }
+   
 
+    .events-page__content.events__content-item--grid {
+        display: grid;
+        grid-template-columns: repeat( auto-fit, minmax(390px, 1fr) );
+        .events-page__content-item  {
+            background-color: #fff;
+            display: flex;
+            flex-direction: column;
+            max-width: 390px;
+            width: 100%;         
+            padding: 24px;
+            align-items: center;
+            margin-bottom: 24px;
+            transition: all .3s;
+            border-radius: 4px;
+            position: relative;
+            border: 1px solid #E5E8ED;
+            border-radius: 4px;
+    
+            &:hover {
+                box-shadow: 0px 80px 80px -20px rgba(154, 156, 165, 0.08), 0px 30px 24px -10px rgba(154, 156, 165, 0.05), 0px 12px 10px -6px rgba(154, 156, 165, 0.04), 0px 4px 4px -4px rgba(30, 33, 44, 0.03);
+                transform: scale(1.02);
+                border-radius: 4px;
+            }
+        }
+        .events-item__month {
+            @extend %title-sml;
+           
+        }
+
+        .events-item__time {
+            color: #787A80;
+
+        }
+
+        .events-item__day {
+            font-size: 48px;
+            line-height: 62px;
+            letter-spacing: 1px;
+            color: #FF3F3A;
+            font-weight: 900;
+            margin-right: 20px;
+            align-self: start;
+        }
+        .events-item__date {
+            align-self: start;
+            margin-bottom: 20px;
+        }
+
+        .events-item__info {
+            padding: 0 0px;
+            max-width: 757px;
+            width: 100%;
+            margin-bottom: 51px;
+           
+        }
+
+        .events-item__link {
+            @extend %title-sml;
+            font-size: 18px;
+        }
+
+        .events-item__descr {
+            color: #787A80;
+        }
+
+        .events__btn {
+            display: flex;
+            justify-content: center;
+            max-width: 390px;
+            width: 100%;
+            padding: 0 130px;
+        }
+
+        .events__bottom {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+
+        .events__bottom-text {
+            font-size: 28px;
+            line-height: 42px;
+            font-weight: 700;
+            color: $title;
+            margin-right: 40px;
+        }
+    }
 }
+
 
 
 @import 'media';
