--- a/app/scss/_libs.scss
+++ b/app/scss/_libs.scss
@@ -2,3 +2,4 @@
 @import '../../node_modules/slick-carousel/slick/slick-theme';
 @import '../../node_modules/jquery-form-styler/dist/jquery.formstyler';
 @import '../../node_modules/jquery-form-styler/dist/jquery.formstyler.theme';
+@import '../../node_modules/@fancyapps/ui/dist/fancybox';
