--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -294,7 +294,7 @@
         justify-content: center;
         margin-bottom: 8px;
         transition: all .8s;
-
+        margin-right: 5px;
         &:hover {
             background-color: rgba(255, 63, 58, .12)
         }
@@ -307,11 +307,13 @@
         line-height: 15px;
         font-weight: 700;
         color: $title;
-
+        max-width: 200px;
+        // width: 100%;
         img {
             width: 52px;
-            height: 52px;
+            height: 52px;            
             object-fit: cover;
+        
         }
     }
 
@@ -2570,4 +2572,80 @@
     }
 }
 
+
+//start aboutus-page 
+
+.aboutus-hero {
+    &__inner {
+        display: flex;
+        justify-content: space-between;
+        padding-bottom: 180px;
+        align-items: center;
+    }
+    &__content {
+        max-width: 600px;
+        width: 100%;   
+    }
+    &__suptitle {
+        max-width: 240px;
+        width: 100%;
+        text-align: left;
+    }
+    &__title {
+        max-width: 520px;
+        width: 100%;
+        margin-bottom: 48px;
+        text-align: left;
+    }
+    &__text-head {
+        margin-bottom: 24px;
+    }
+    &__text {
+        margin-bottom: 60px;
+    }
+    &__btn-box {
+        display: flex;
+    }
+    &__btn {
+        margin-right: 24px;
+    }   
+    &__image {
+        object-fit: cover;
+        margin-left: 40px;
+    }
+}
+
+.history {
+    &__inner {
+        padding-bottom: 180px;
+    }
+    &__content {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+    &__content-list {
+        max-width: 320px;        
+        margin-left: 40px;    
+        
+    }
+    &__list-item {
+        display: flex;
+        align-items: center;
+        font-size: 18px;
+        font-weight: 700;
+        color: $title;
+        flex-basis: 100%;  
+        width: 100%;
+      
+        span {
+            font-size: 48px;
+            line-height: 62px;
+            font-weight: 900;
+            color: $accent;
+            letter-spacing: 1px;
+            margin-right: 16px;
+        }
+    }
+}
 @import 'media';
