--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -295,6 +295,7 @@
         margin-bottom: 8px;
         transition: all .8s;
         margin-right: 5px;
+
         &:hover {
             background-color: rgba(255, 63, 58, .12)
         }
@@ -308,12 +309,13 @@
         font-weight: 700;
         color: $title;
         max-width: 200px;
+
         // width: 100%;
         img {
             width: 52px;
-            height: 52px;            
+            height: 52px;
             object-fit: cover;
-        
+
         }
     }
 
@@ -2508,15 +2510,16 @@
 
 
 .events-slider {
-    .events-page__content-item {       
+    .events-page__content-item {
         width: 100%;
-        margin: 0 15px;     
+        margin: 0 15px;
         box-shadow: 0px 80px 80px -20px rgba(154, 156, 165, 0.08), 0px 30px 24px -10px rgba(154, 156, 165, 0.05), 0px 12px 10px -6px rgba(154, 156, 165, 0.04), 0px 4px 4px -4px rgba(30, 33, 44, 0.03);
         border-radius: 4px;
         border: 1px solid #E5E8ED;
         padding: 16px;
-       
-    }   
+
+    }
+
     .events-item__info {
         padding: 0;
         margin-bottom: 50px;
@@ -2525,20 +2528,25 @@
     .events-item__time {
         margin-bottom: 20px;
     }
+
     .events-item__link {
         font-size: 18px;
     }
+
     .events__btn {
-        justify-content: center;        
+        justify-content: center;
     }
+
     .slick-arrow {
         position: absolute;
     }
+
     .right-arrow {
         top: -60px;
         right: 0;
         cursor: pointer;
     }
+
     .left-arrow {
         top: -60px;
         right: 40px;
@@ -2557,11 +2565,12 @@
         margin-bottom: 80px;
         position: relative;
     }
-   
+
     &__btn-box {
         display: flex;
         justify-content: center;
         align-items: center;
+
         span {
             font-size: 28px;
             line-height: 42px;
@@ -2582,33 +2591,41 @@
         padding-bottom: 180px;
         align-items: center;
     }
+
     &__content {
         max-width: 600px;
-        width: 100%;   
+        width: 100%;
     }
+
     &__suptitle {
         max-width: 240px;
         width: 100%;
         text-align: left;
     }
+
     &__title {
         max-width: 520px;
         width: 100%;
         margin-bottom: 48px;
         text-align: left;
     }
+
     &__text-head {
         margin-bottom: 24px;
     }
+
     &__text {
         margin-bottom: 60px;
     }
+
     &__btn-box {
         display: flex;
     }
+
     &__btn {
         margin-right: 24px;
-    }   
+    }
+
     &__image {
         object-fit: cover;
         margin-left: 40px;
@@ -2619,25 +2636,28 @@
     &__inner {
         padding-bottom: 180px;
     }
+
     &__content {
         display: flex;
         justify-content: space-between;
         align-items: center;
     }
+
     &__content-list {
-        max-width: 320px;        
-        margin-left: 40px;    
-        
+        max-width: 320px;
+        margin-left: 40px;
+
     }
+
     &__list-item {
         display: flex;
         align-items: center;
         font-size: 18px;
         font-weight: 700;
         color: $title;
-        flex-basis: 100%;  
+        flex-basis: 100%;
         width: 100%;
-      
+
         span {
             font-size: 48px;
             line-height: 62px;
@@ -2648,4 +2668,150 @@
         }
     }
 }
+
+.core {
+    &__inner {
+        padding-bottom: 180px;
+    }
+
+    &__title {
+        margin-bottom: 60px;
+    }
+
+    &__content-box {
+        display: flex;
+        justify-content: space-between;
+        flex-basis: 100%;
+    }
+
+    &__item {
+        max-width: 240px;
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+        position: relative;
+
+        &::after {
+            content: "";
+            position: absolute;
+            width: 1px;
+            height: 100%;
+            right: -45px;
+            border: 1px solid;
+            border-top: 0;
+            border-bottom: 0;
+            border-image: linear-gradient(to bottom, rgba(255, 255, 255, 0) 0%, rgba(226, 226, 226, 1) 48%, rgba(255, 255, 255, 0) 100%);
+            border-image-slice: 1;
+        }
+
+        &:last-child {
+            &::after {
+                display: none;
+            }
+        }
+    }
+
+    &__item-img {
+        margin-bottom: 24px;
+    }
+
+    &__item-title {
+        margin-bottom: 8px;
+    }
+
+    &__item-text {
+        color: #787A80;
+    }
+}
+
+
+.direction {
+    &__inner {
+        padding-bottom: 180px;
+    }
+
+    &__title-box {
+        max-width: 600px;
+        margin: 0 auto 60px;
+    }
+
+    &__content {
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(380px, 1fr));
+        gap: 30px;
+    }
+
+    &__content-item {
+        max-width: 390px;
+        width: 100%;
+        border: 1px solid #E5E8ED;
+        border-radius: 4px;
+        transition: all .3s;
+
+        &:hover {
+            box-shadow: 0px 80px 80px -20px rgba(154, 156, 165, 0.08), 0px 30px 24px -10px rgba(154, 156, 165, 0.05), 0px 12px 10px -6px rgba(154, 156, 165, 0.04), 0px 4px 4px -4px rgba(30, 33, 44, 0.03);
+            border-radius: 4px;
+        }
+    }
+
+    &-item__info {
+        padding: 24px;
+    }
+
+    &-item__image {
+        object-fit: cover;
+    }
+
+    &-item__spec {
+        color: #fff;
+        padding: 2px 8px;
+        border-radius: 4px;
+    }
+
+    &-item__text {
+        color: #787A80;
+        margin: 20px 0;
+    }
+
+    &-item__link {
+        font-weight: 700;
+        position: relative;
+
+        &:hover {
+            color: $accent;
+        }
+
+        &::after {
+            content: "";
+            position: absolute;
+            width: 20px;
+            height: 11px;
+            background-image: url(../images/ac-arrow.png);
+            background-repeat: no-repeat;
+            right: -35px;
+            top: 4px;
+        }
+    }
+
+    &__content-item--last {
+        background: #F4F5F7;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
+    }
+
+    &-item__cs {
+        max-width: 240px;
+        width: 100%;
+        font-size: 20px;
+        line-height: 30px;
+        font-weight: 700;
+
+    }
+
+}
+
 @import 'media';
