--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -985,17 +985,21 @@
     .right-arrow {
         right: 10px;
     }
+
     &__grid {
         display: grid;
         justify-items: center;
-        grid-template-columns: repeat( auto-fit, minmax(250px, 1fr) );
+        grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
         gap: 60px 30px;
     }
+
     &.team-grid {
+
         .team__suptitle,
         .team__title {
             text-align: center;
         }
+
         .team__inner {
             padding: 0 0 120px 0;
         }
@@ -1120,6 +1124,7 @@
             background-color: $text;
         }
     }
+
     &.ab-tst {
         .testimonials__inner {
             padding: 100px 0 180px 0;
@@ -2837,26 +2842,32 @@
 .process {
     &__inner {
         display: flex;
-        justify-content: space-between;        
+        justify-content: space-between;
         padding-bottom: 180px;
     }
+
     &__content {
         max-width: 500px;
-        width: 100%;     
+        width: 100%;
     }
+
     &__title-box {
         text-align-last: left;
         margin-bottom: 60px;
     }
+
     &__content-items {
         padding-left: 40px;
     }
+
     &__content-item {
         padding-bottom: 32px;
         position: relative;
+
         &:last-child {
             padding-bottom: 0;
         }
+
         &::before {
             content: "";
             position: absolute;
@@ -2868,6 +2879,7 @@
             opacity: .5;
         }
     }
+
     &-item__step {
         font-size: 12px;
         line-height: 18px;
@@ -2875,6 +2887,7 @@
         color: #787A80;
         margin-bottom: 2px;
         position: relative;
+
         &::before {
             content: "";
             position: absolute;
@@ -2887,16 +2900,20 @@
             z-index: 3;
         }
     }
+
     &-item__name {
         margin-bottom: 8px;
     }
+
     &-item__text {
         color: #787A80;
     }
+
     &__image-box {
         align-self: end;
         margin-left: 40px;
     }
+
     &__image {
         object-fit: cover;
     }
@@ -2906,12 +2923,204 @@
     &__inner {
         padding-bottom: 75px;
     }
+
     &__items {
         display: grid;
         justify-content: center;
         grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
         grid-gap: 40px 102px;
     }
+}
+
+//start blog-page   
+
+.blog-page {
+    &__inner {
+        padding-bottom: 180px;
+    }
+    &__title-box {
+        max-width: 810px;
+        width: 100%;
+        margin: 0 auto 60px;
+    }
+
+    &__content-head {
+        display: flex;
+        justify-content: space-between;
+        margin-bottom: 60px;
+    }
+
+    &__content-categories {
+        button {
+            background-color: transparent;
+            border: 1px solid;
+            border-color: transparent;
+            border-radius: 4px;
+            font-weight: 700;
+            color: #9A9CA5;
+            padding: 10px 20px 10px 44px;
+            position: relative;
+            cursor: pointer;
+
+            &:hover {
+                color: $title;
+                // border: 1px solid $accent;
+
+                svg {
+                    stroke: $title;
+                }
+            }
+
+            svg {
+                position: absolute;
+                left: 20px;
+                top: 14px;
+            }
+
+            &.mixitup-control-active{
+                border: 1px solid $accent;
+                color: $accent;
+
+                svg {
+                    stroke: $accent;
+                }
+            }
+        }
+
+        .btn-all {
+            padding: 10px 20px;
+        }
+    }
+
+    label {
+        font-weight: 700;
+    }
+
+    &__content-select {
+        margin-left: 12px;
+
+        .jq-selectbox__select {
+            height: 44px;
+            // padding: 12px 16px;
+            padding: 0;
+            width: 160px;
+            border: 1px solid #D7DADD;
+            line-height: 21px;
+            color: $text;
+            background: transparent;
+            display: flex;
+            align-items: center;
+            text-shadow: none;
+            box-shadow: none;
+            position: relative;
+            margin-right: 40px;
+
+            &::after {
+                content: "";
+                position: absolute;
+                background-image: url(../images/arrow-down2.png);
+                background-repeat: no-repeat;
+                background-size: cover;
+                width: 18px;
+                height: 9px;
+                right: 19px;
+            }
+
+        }
+
+        .jq-selectbox__select-text {
+            padding-left: 16px;
+            font-size: 14px;
+
+        }
+
+        .jq-selectbox__trigger {
+            display: none;
+        }
+
+        .jq-selectbox__dropdown {
+            top: 41px;
+            width: 160px;
+        }
+    }
+
+    &__content-searchbox {
+        flex-basis: 51%;
+
+        label {
+            position: relative;
+
+            &:hover {
+                svg {
+                    stroke: $accent;
+                }
+            }
+
+            input {
+                padding: 12px 66px 12px 16px;
+                border: 1px solid #D7DADD;
+                border-radius: 4px;
+                max-width: 285px;
+                font-size: 14px;
+                line-height: 21px;
+                color: #9A9CA5;
+                width: 100%;
+                outline-color: $accent;
+            }
+
+            svg {
+                position: absolute;
+                right: 15px;
+                top: 3px;
+            }
+        }
+    }
+    &__content-items {
+        display: grid;
+        justify-content: center;
+        grid-template-columns: repeat(auto-fit, minmax(380px, 1fr));
+        grid-gap: 60px 30px;
+        margin-bottom: 80px;
+        .blog__post:nth-child(4) {
+            max-width: 805px;
+            width: 100%;
+            grid-column: span 2;      
+          
+            .blog-post__image {
+                max-width: 805px !important; 
+                width: 100% !important;                  
+            }
+        }     
+        
+    }
+    &__sb {
+        .subscribe-box__inner {
+            padding: 0;
+            justify-content: space-between;
+        }
+        .jq-checkbox {
+            background: #fff;
+            border: 1px solid $title;
+        }        
+       
+        .jq-checkbox.checked {
+            background: $accent;
+            border: none;
+        }
+        .jq-checkbox.checked .jq-checkbox__div {
+            width: 8px;
+            height: 6px;
+            margin: 3px 0 0 3px;
+            border-bottom: 2px solid #fff;
+            border-left: 2px solid #fff;
+            -webkit-transform: rotate(-50deg);
+            -ms-transform: rotate(-50deg);
+            transform: rotate(-50deg);
+        }
+      
+    }
+
+
 }
 
 @import 'media';
