--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -2938,6 +2938,7 @@
     &__inner {
         padding-bottom: 180px;
     }
+
     &__title-box {
         max-width: 810px;
         width: 100%;
@@ -2977,7 +2978,7 @@
                 top: 14px;
             }
 
-            &.mixitup-control-active{
+            &.mixitup-control-active {
                 border: 1px solid $accent;
                 color: $accent;
 
@@ -3075,38 +3076,43 @@
             }
         }
     }
+
     &__content-items {
         display: grid;
         justify-content: center;
         grid-template-columns: repeat(auto-fit, minmax(380px, 1fr));
         grid-gap: 60px 30px;
         margin-bottom: 80px;
+
         .blog__post:nth-child(4) {
             max-width: 805px;
             width: 100%;
-            grid-column: span 2;      
-          
+            grid-column: span 2;
+
             .blog-post__image {
-                max-width: 805px !important; 
-                width: 100% !important;                  
+                max-width: 805px !important;
+                width: 100% !important;
             }
-        }     
-        
+        }
+
     }
+
     &__sb {
         .subscribe-box__inner {
             padding: 0;
             justify-content: space-between;
         }
+
         .jq-checkbox {
             background: #fff;
             border: 1px solid $title;
-        }        
-       
+        }
+
         .jq-checkbox.checked {
             background: $accent;
             border: none;
         }
+
         .jq-checkbox.checked .jq-checkbox__div {
             width: 8px;
             height: 6px;
@@ -3117,8 +3123,183 @@
             -ms-transform: rotate(-50deg);
             transform: rotate(-50deg);
         }
-      
+
     }
+
+
+}
+
+//blog-single page start
+.blog-single {
+    &__inner {
+        display: flex;
+        justify-content: space-between;
+    }
+
+    &__aside {
+        width: 350px;
+        margin-left: 75px;
+
+        .aside__search-form {
+            position: relative;
+            margin-bottom: 60px;
+
+        }
+
+        .aside__search-input {
+            width: 100%;
+            padding: 12px 60px 12px 16px;
+            border: 1px solid #D7DADD;
+            border-radius: 4px;
+            font-size: 14px;
+            line-height: 21px;
+            color: #9A9CA5;
+            outline-color: $accent;
+        }
+
+        .aside__search-btn {
+            position: absolute;
+            width: 50px;
+            height: 100%;
+            right: 0;
+            background-color: transparent;
+            border: none;
+            cursor: pointer;
+
+            &:hover {
+                svg {
+                    stroke: $accent;
+                }
+            }
+
+            svg {
+                position: absolute;
+                top: 17px;
+                right: 18px;
+            }
+        }
+
+        .aside-box__title {
+            line-height: 24px;
+            font-weight: 700;
+            letter-spacing: 1px;
+            text-transform: uppercase;
+            color: $title;
+            margin-bottom: 24px;
+        }
+
+        .aside-box {
+            margin-bottom: 60px;
+        }
+
+        .aside__author-item,
+        .aside__trends-item,
+        .aside__tags-list {
+            display: flex;
+
+        }
+
+        .aside__author-image,
+        .aside__trends-image {
+            object-fit: cover;
+
+        }
+
+        .aside__author-info,
+        .aside__trends-info {
+            margin-left: 20px;
+        }
+
+        .aside__author-name {
+            margin-bottom: 4px;
+        }
+
+        .aside__author-position {
+            font-size: 14px;
+            line-height: 21px;
+            color: #787A80;
+            margin-bottom: 18px;
+        }
+
+        .aside__author-socials {
+            display: flex;
+
+            li {
+                a:hover {
+                    svg {
+
+                        fill: $accent;
+                    }
+                }
+            }
+
+            li+li {
+                margin-left: 14px;
+            }
+        }
+
+        .aside__trends-item+.aside__trends-item {
+            margin-top: 24px;
+        }
+
+        .aside__trends-date {
+            font-size: 14px;
+            line-height: 24px;
+            color: #787A80;
+            padding-left: 25px;
+            margin-bottom: 4px;
+            position: relative;
+
+            &::before {
+                content: "";
+                position: absolute;
+                background-image: url(../images/post-calendar.png);
+                background-repeat: no-repeat;
+                background-size: cover;
+                width: 14px;
+                height: 14px;
+                left: 0;
+                top: 5px;
+            }
+        }
+
+        .aside__trends-theme {
+            font-weight: 700;
+            color: $title;
+
+            &:hover {
+                color: $accent;
+            }
+        }
+
+        .aside__tags-list {
+            justify-content: space-between;
+            flex-wrap: wrap;
+        }
+
+        .aside__tags-item {
+            padding: 6px 16px;           
+            border: 1px solid #D7DADD;
+            border-radius: 4px;
+            margin-bottom: 12px;
+            transition: all .3s;
+            &:hover {
+                background-color: $accent;
+                border: 1px solid $accent;
+                a {
+                    color: #fff;
+                }
+            }
+        }
+        .aside__tags-link {
+            font-size: 16px;
+            line-height: 21px;
+            color: #787A80;
+        }
+    }
+
+
+
 
 
 }
