--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -3563,6 +3563,7 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
+        margin-bottom: 180px;
     }
 
     &__map {
@@ -3581,6 +3582,7 @@
 
     &__list {
         margin-bottom: 48px;
+
         span {
             display: block;
             font-size: 14px;
@@ -3681,6 +3683,91 @@
 
     }
 
+
+
+}
+
+.questions {
+    &__inner {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        margin-bottom: 180px;
+
+    }
+
+    &__form-box {
+        max-width: 705px;
+        width: 100%;
+    }
+
+    &__title {
+        margin-bottom: 40px;
+    }
+
+    &__title,
+    &__suptitle {
+        text-align: left;
+    }
+
+    &__form {
+        display: flex;
+        justify-content: space-between;
+        flex-wrap: wrap;
+        gap: 24px 0;
+        flex-basis: 100%;
+
+    }
+
+    &__form-item {
+        width: 340px;
+    }
+
+    &__form-input {
+        max-width: 340px;
+        width: 100%;
+        padding: 13px 16px;
+        border: 1px solid #D7DADD;
+        border-radius: 4px;
+        margin-top: 8px;
+        &::placeholder {
+            color: #9A9CA5;
+        }
+        
+    }
+
+    &__form-textarea {
+        width: 705px;
+        max-width: 705px;
+        width: 100%;
+
+        textarea {
+            width: 100%;
+            resize: none;
+            padding: 13px 16px;
+            border: 1px solid #D7DADD;
+            border-radius: 4px;
+            min-height: 128px;
+            margin-top: 8px;
+            &::placeholder {
+                color: #9A9CA5;
+            }
+        }
+    }
+
+    &__checkbox {
+        display: block;
+        align-items: center;
+        display: flex;
+        max-width: 358px;
+    }
+    &__btn {
+        max-width: 340px;
+        width: 100%;
+    }
+    .jq-checkbox, .jq-radio {
+        margin: 0 12px 27px 0;
+    }
 }
 
 
